--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </small>
                     <footer>
                         <div class="pool-right">
-                            <a href="#" class="btn btn-default btn-xs">Read more &raquo;</a>
+                            <a href="viewpost.html" class="btn btn-default btn-xs">Read more &raquo;</a>
                         </div>
                     </footer>
                 </article>
@@ -67,7 +67,7 @@
                     </small>
                     <footer>
                         <div class="pool-right">
-                            <a href="#" class="btn btn-default btn-xs">Read more &raquo;</a>
+                            <a href="viewpost.html" class="btn btn-default btn-xs">Read more &raquo;</a>
                         </div>
                     </footer>
                 </article>
@@ -87,7 +87,7 @@
                     </small>
                     <footer>
                         <div class="pool-right">
-                            <a href="#" class="btn btn-default btn-xs">Read more &raquo;</a>
+                            <a href="viewpost.html" class="btn btn-default btn-xs">Read more &raquo;</a>
                         </div>
                     </footer>
                 </article>
