--- a/viewpost.html
+++ b/viewpost.html
@@ -47,51 +47,12 @@
                     </small>
                     <footer>
                         <div class="pool-right">
-                            <a href="#" class="btn btn-default btn-xs">back &raquo;</a>
+                            <a href="index.html" class="btn btn-default btn-xs">back &raquo;</a>
                         </div>
                     </footer>
                 </article>
             </div>
-            <div class="col-md-12">
-                <article>
-                    <header>
-                        <h2>Why Choosing the Right Storage Infrastructure.</h2>
-                    </header>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloribus eaque explicabo mollitia perferendis, perspiciatis qui recusandae totam. Cumque in laboriosam libero maiores nam nulla repellendus saepe sequi ut vel.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloribus eaque explicabo mollitia perferendis, perspiciatis qui recusandae totam. Cumque in laboriosam libero maiores nam nulla repellendus saepe sequi ut vel.
 
-                    </p>
-                    <small class="author">
-                        <p>Steve Fowler</p>
-
-                    </small>
-                    <footer>
-                        <div class="pool-right">
-                            <a href="#" class="btn btn-default btn-xs">back &raquo;</a>
-                        </div>
-                    </footer>
-                </article>
-            </div>
-            <div class="col-md-12">
-                <article>
-                    <header>
-                        <h2>Why Choosing the Right Storage Infrastructure.</h2>
-                    </header>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloribus eaque explicabo mollitia perferendis, perspiciatis qui recusandae totam. Cumque in laboriosam libero maiores nam nulla repellendus saepe sequi ut vel.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloribus eaque explicabo mollitia perferendis, perspiciatis qui recusandae totam. Cumque in laboriosam libero maiores nam nulla repellendus saepe sequi ut vel.
-
-                    </p>
-                    <small class="author">
-                        <p>Steve Fowler</p>
-
-                    </small>
-                    <footer>
-                        <div class="pool-right">
-                            <a href="#" class="btn btn-default btn-xs">back &raquo;</a>
-                        </div>
-                    </footer>
-                </article>
-            </div>
         </div>
     </div>
 </main>
